--- a/02-consumo-api/axios/index.html
+++ b/02-consumo-api/axios/index.html
@@ -16,6 +16,6 @@
     <button type="submit">Agregar producto</button>
   </form>
   <ul id="product-list"></ul>
-  <script src="main.js"></script>
+  <script src="resuelto.js"></script>
 </body>
 </html> 
