--- a/04-enrutamiento/spa-history/index.html
+++ b/04-enrutamiento/spa-history/index.html
@@ -10,8 +10,9 @@
     <button data-route="/">Inicio</button>
     <button data-route="/productos">Productos</button>
     <button data-route="/contacto">Contacto</button>
+    <button data-route="/producto/1">Producto 1</button>
   </nav>
   <main id="app"></main>
-  <script type="module" src="main.js"></script>
+  <script type="module" src="ejercicio.js"></script>
 </body>
 </html> 
