--- a/02-consumo-api/fetch/index.html
+++ b/02-consumo-api/fetch/index.html
@@ -6,7 +6,7 @@
   <title>Consumo de API - Productos</title>
 </head>
 <body>
-  <h1>Productos</h1>
+  <h1>Productos(fetch)</h1>
   <form id="product-form">
     <input type="text" id="name" placeholder="Nombre" required />
     <input type="number" id="price" placeholder="Precio" required />
@@ -14,6 +14,6 @@
     <button type="submit">Agregar producto</button>
   </form>
   <ul id="product-list"></ul>
-  <script src="main.js"></script>
+  <script src="ejercicio.js"></script>
 </body>
 </html> 
